add_subdirectory(base64)
add_subdirectory(crc16)
add_subdirectory(serial_port)
add_subdirectory(connector)
add_subdirectory(flasher)
add_subdirectory(HostControllerClient)
if(APPS_HCS AND NOT APPS_HCS_V3)
    add_subdirectory(sgwget)
endif()
add_subdirectory(PlatformInterface)
add_subdirectory(EventsMgr)
add_subdirectory(CommandValidator)
add_subdirectory(loggers)
add_subdirectory(Board)
add_subdirectory(DownloadManager)
add_subdirectory(Database)
