add_subdirectory(base64)
add_subdirectory(crc16)
add_subdirectory(connector)
add_subdirectory(flasher)
add_subdirectory(HostControllerClient)
add_subdirectory(PlatformInterface)
add_subdirectory(CommandValidator)
add_subdirectory(loggers)
add_subdirectory(Board)
add_subdirectory(DownloadManager)
add_subdirectory(Database)
if(APPS_CORESW AND APPS_CORESW_HCS)
    add_subdirectory(EventsMgr)
endif()
